--- a/login.css
+++ b/login.css
@@ -3,7 +3,7 @@ body::after{
     position: absolute;
     top: 0;
     left: 0;
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     z-index: 1;
     background: #fffdfda1;
@@ -11,4 +11,34 @@ body::after{
 .nav2st li a {
     color: #0f4d6b;
     z-index: 3;
+}
+
+.overall2{
+    width: 400px;
+    /* height: 500px; */
+    background-color: white;
+    margin: auto;
+    border-radius: 1rem;
+    z-index: 5;
+    margin-top: 3rem;
+}
+.head-section{
+    border-radius: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(240,75,70);
+    padding: 1rem;
+}
+.notice-section{
+display: flex;
+justify-content: space-between;
+gap: 2rem;
+align-items: center;
+background-color: rgb(255,170,51);
+margin: 2rem;
+border-radius: 1rem;
+}
+.fs{
+    font-size: 3rem;
 }
